[gd_scene load_steps=5 format=2]

[ext_resource path="res://theme/UI.tres" type="Theme" id=1]
[ext_resource path="res://scripts/Pause_menu.gd" type="Script" id=2]

[sub_resource type="InputEventAction" id=1]
action = "ui_cancel"

[sub_resource type="ShortCut" id=2]
shortcut = SubResource( 1 )

[node name="Pause_menu" type="CanvasLayer"]
pause_mode = 2
physics_interpolation_mode = 2
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.466667 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -32.0
margin_top = -25.0
margin_right = 32.0
margin_bottom = 25.0

[node name="Resume" type="Button" parent="Control/VBoxContainer"]
modulate = Color( 1.1, 1.1, 1.1, 1 )
margin_right = 64.0
margin_bottom = 14.0
shortcut = SubResource( 2 )
text = "Resume"

[node name="Config" type="Button" parent="Control/VBoxContainer"]
modulate = Color( 1.1, 1.1, 1.1, 1 )
margin_top = 18.0
margin_right = 64.0
margin_bottom = 32.0
text = "Config"

[node name="Menu" type="Button" parent="Control/VBoxContainer"]
modulate = Color( 1.1, 1.1, 1.1, 1 )
margin_top = 36.0
margin_right = 64.0
margin_bottom = 50.0
text = "Menu"

[connection signal="pressed" from="Control/VBoxContainer/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/Config" to="." method="_on_Config_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/Menu" to="." method="_on_Menu_pressed"]
